# shen-ocaml

./: .gitignore  ocaml-port-build-prompt.md
shen-ocaml/: ARCHITECTURE.md  BENCHMARKS.md  FLAMBDA.md  Makefile  README.md  STATUS.md  dune  dune-project  flake.nix  shen-ocaml.opam
shen-ocaml/_build/: .db  .digest-db  log
shen-ocaml/_build/default/: shen-ocaml.dune-package  shen-ocaml.install  shen-ocaml.opam
shen-ocaml/_build/default/.dune/: configurator  configurator.v2
shen-ocaml/_build/default/aot_kernel/: kernel_bundle.ml  shen_aot_kernel.cma  shen_aot_kernel.cmxa  shen_aot_kernel.ml-gen
shen-ocaml/_build/default/aot_kernel/.merlin-conf/: lib-shen_aot_kernel
shen-ocaml/_build/default/aot_kernel/.shen_aot_kernel.objs/: shen_aot_kernel__Kernel_bundle.impl.d
shen-ocaml/_build/default/aot_kernel/.shen_aot_kernel.objs/byte/: shen_aot_kernel.cmi  shen_aot_kernel.cmo  shen_aot_kernel.cmt  shen_aot_kernel__Kernel_bundle.cmi  shen_aot_kernel__Kernel_bundle.cmo
shen-ocaml/_build/default/aot_kernel/.shen_aot_kernel.objs/native/: shen_aot_kernel.cmx  shen_aot_kernel__Kernel_bundle.cmx
shen-ocaml/_build/default/src/: shen.cma  shen.cmxa  shen.cmxs  shen.ml-gen  shen__Codegen.ml-gen  shen__Interp.ml-gen  shen__Kl.ml-gen  shen__Runtime.ml-gen
shen-ocaml/_build/default/src/.merlin-conf/: lib-shen
shen-ocaml/_build/default/src/.shen.objs/: shen__Codegen__Ocaml_gen.impl.all-deps  shen__Codegen__Ocaml_gen.impl.d  shen__Interp__Boot.impl.all-deps  shen__Interp__Boot.impl.d  shen__Interp__Eval.impl.all-deps  shen__Interp__Eval.impl.d  shen__Kl__Ast.impl.d  shen__Kl__Ir.impl.d  shen__Kl__Parser.impl.all-deps  shen__Kl__Parser.impl.d  shen__Runtime__Env.impl.all-deps  shen__Runtime__Env.impl.d  shen__Runtime__Guard_types_link.impl.d  shen__Runtime__Primitives.impl.all-deps  shen__Runtime__Primitives.impl.d  shen__Runtime__Symbol.impl.d  shen__Runtime__Value.impl.d
shen-ocaml/_build/default/src/.shen.objs/byte/: shen.cmi  shen.cmo  shen.cmt  shen__Codegen.cmi  shen__Codegen.cmo  shen__Codegen.cmt  shen__Codegen__Ocaml_gen.cmi  shen__Codegen__Ocaml_gen.cmo  shen__Codegen__Ocaml_gen.cmt  shen__Interp.cmi  shen__Interp.cmo  shen__Interp.cmt  shen__Interp__Boot.cmi  shen__Interp__Boot.cmo  shen__Interp__Boot.cmt  shen__Interp__Eval.cmi  shen__Interp__Eval.cmo  shen__Interp__Eval.cmt  shen__Kl.cmi  shen__Kl.cmo  shen__Kl.cmt  shen__Kl__Ast.cmi  shen__Kl__Ast.cmo  shen__Kl__Ast.cmt  shen__Kl__Ir.cmi  shen__Kl__Ir.cmo  shen__Kl__Ir.cmt  shen__Kl__Parser.cmi  shen__Kl__Parser.cmo  shen__Kl__Parser.cmt  shen__Runtime.cmi  shen__Runtime.cmo  shen__Runtime.cmt  shen__Runtime__Env.cmi  shen__Runtime__Env.cmo  shen__Runtime__Env.cmt  shen__Runtime__Guard_types_link.cmi  shen__Runtime__Guard_types_link.cmo  shen__Runtime__Guard_types_link.cmt  shen__Runtime__Primitives.cmi  (+8 more)
shen-ocaml/_build/default/src/.shen.objs/native/: shen.cmx  shen__Codegen.cmx  shen__Codegen__Ocaml_gen.cmx  shen__Interp.cmx  shen__Interp__Boot.cmx  shen__Interp__Eval.cmx  shen__Kl.cmx  shen__Kl__Ast.cmx  shen__Kl__Ir.cmx  shen__Kl__Parser.cmx  shen__Runtime.cmx  shen__Runtime__Env.cmx  shen__Runtime__Guard_types_link.cmx  shen__Runtime__Primitives.cmx  shen__Runtime__Symbol.cmx  shen__Runtime__Value.cmx
shen-ocaml/_build/default/src/codegen/: ocaml_gen.ml
shen-ocaml/_build/default/src/interp/: boot.ml  eval.ml
shen-ocaml/_build/default/src/kl/: ir.ml  parser.ml
shen-ocaml/_build/default/src/runtime/: env.ml  symbol.ml
shen-ocaml/_build/default/test/: test_kernel_shen_suite.ml  test_load_tiny_relative.ml  test_shen.ml
shen-ocaml/_build/default/test/.merlin-conf/: exe-test_codegen_smoke  exe-test_kernel_boot  exe-test_kernel_shen_suite  exe-test_load_tiny_relative  exe-test_repl_path  exe-test_shen  exe-test_types_kl_aot
shen-ocaml/_build/default/test/.test_codegen_smoke.eobjs/byte/: dune__exe__Test_codegen_smoke.cmi  dune__exe__Test_codegen_smoke.cmti
shen-ocaml/_build/default/test/.test_codegen_smoke.eobjs/native/: dune__exe__Test_codegen_smoke.cmx
shen-ocaml/_build/default/test/.test_kernel_boot.eobjs/byte/: dune__exe__Test_kernel_boot.cmi  dune__exe__Test_kernel_boot.cmti
shen-ocaml/_build/default/test/.test_kernel_boot.eobjs/native/: dune__exe__Test_kernel_boot.cmx
shen-ocaml/_build/default/test/.test_kernel_shen_suite.eobjs/byte/: dune__exe__Test_kernel_shen_suite.cmi  dune__exe__Test_kernel_shen_suite.cmti
shen-ocaml/_build/default/test/.test_kernel_shen_suite.eobjs/native/: dune__exe__Test_kernel_shen_suite.cmx
shen-ocaml/_build/default/test/.test_load_tiny_relative.eobjs/byte/: dune__exe__Test_load_tiny_relative.cmi  dune__exe__Test_load_tiny_relative.cmti
shen-ocaml/_build/default/test/.test_repl_path.eobjs/byte/: dune__exe__Test_repl_path.cmi  (+1 more)
shen-ocaml/_build/default/test/.test_shen.eobjs/: dune__exe.ml-gen  dune__exe__Test_eval.impl.d  dune__exe__Test_shen.impl.all-deps  dune__exe__Test_shen.impl.d  dune__exe__Test_shen.intf.d
shen-ocaml/_build/default/test/shen/: harness.shen  tiny.shen
shen-ocaml/_build/default/tools/.merlin-conf/: exe-gen_all_kernel_forms  exe-gen_kl_forms
shen-ocaml/aot_kernel/: dune
shen-ocaml/aot_kernel_compiled/: aot_boot.ml  dune
shen-ocaml/aot_test/: dune
shen-ocaml/bench/typed_vs_erased/: README.md  bench_main.ml  dune  typed_numeric.shen
shen-ocaml/kernel/: stlib.kl
shen-ocaml/plans/: implementation_plan.md
shen-ocaml/scripts/: bench_flambda.sh  compile_kernel.ml  run_kernel_suite.py
shen-ocaml/src/: dune
shen-ocaml/src/codegen/: ocaml_compile.ml  ocaml_specialize.ml
shen-ocaml/src/interp/: boot.ml
shen-ocaml/src/kl/: ast.ml
shen-ocaml/src/runtime/: env.ml  guard_types_link.ml  primitives.ml  spec.ml  value.ml
shen-ocaml/test/: dune  test_aot_fixture.ml  test_aot_kernel_boot.ml  test_codegen_smoke.ml  test_eval.ml  test_kernel_boot.ml  test_kernel_shen_suite.ml  test_parser.ml  test_repl_path.ml  test_specialize.ml  test_symbol.ml  test_types_kl_aot.ml
shen-ocaml/test/fixtures/: aot_fixture.kl
shen-ocaml/tools/: dune  gen_all_kernel_forms.ml  gen_aot.ml  gen_aot_kernel.ml  gen_kl_forms.ml  gen_specialize.ml
(+33 files in other folders)
