(test
 (name test_shen)
 (modules test_shen test_eval)
 (libraries shen))

(test
 (name test_kernel_boot)
 (modules test_kernel_boot)
 (libraries shen)
 (deps
  (source_tree %{workspace_root}/kernel))
 (action
  (setenv
   SHEN_KERNEL_DIR
   %{workspace_root}/kernel
   (run %{test}))))

(test
 (name test_repl_path)
 (modules test_repl_path)
 (libraries shen)
 (deps
  (source_tree %{workspace_root}/kernel))
 (action
  (setenv
   SHEN_KERNEL_DIR
   %{workspace_root}/kernel
   (run %{test}))))

(test
 (name test_load_tiny_relative)
 (modules test_load_tiny_relative)
 (libraries shen)
 (deps
  (source_tree %{workspace_root}/kernel)
  (source_tree %{workspace_root}/test/shen))
 (action
  (chdir %{workspace_root}/test/shen
   (setenv
    SHEN_KERNEL_DIR
    %{workspace_root}/kernel
    (run %{test})))))

(test
 (name test_codegen_smoke)
 (modules test_codegen_smoke)
 (libraries shen str))

(test
 (name test_types_kl_aot)
 (modules test_types_kl_aot)
 (libraries shen_aot_kernel))

; Phase B: AOT-compiled fixture must be bit-identical to the interpreter.
(test
 (name test_aot_fixture)
 (modules test_aot_fixture)
 (libraries shen shen_aot_fixture)
 (deps %{workspace_root}/test/fixtures/aot_fixture.kl)
 (action
  (setenv
   AOT_FIXTURE
   %{workspace_root}/test/fixtures/aot_fixture.kl
   (run %{test}))))

; Phase A conformance regression gate (bounded, in-process, clean subset).
; Full per-group conformance lives in scripts/run_kernel_suite.py (see STATUS.md).
(test
 (name test_kernel_shen_suite)
 (modules test_kernel_shen_suite)
 (libraries shen str unix)
 (deps
  (source_tree %{workspace_root}/kernel)
  (source_tree %{workspace_root}/test/shen))
 (action
  (chdir %{workspace_root}/test/shen
   (setenv
    SHEN_KERNEL_DIR
    %{workspace_root}/kernel
    (run %{test})))))