(executable
 (name gen_kl_forms)
 (modules gen_kl_forms)
 (libraries shen))

(executable
 (name gen_all_kernel_forms)
 (modules gen_all_kernel_forms)
 (libraries shen))

(executable
 (name gen_aot)
 (modules gen_aot)
 (libraries shen))

(executable
 (name gen_aot_kernel)
 (modules gen_aot_kernel)
 (libraries shen))
